# hospital-management-system

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13d7446f6c67_create_core_tables.py  2763f0156e3b_add_consultations_table.py  691a40698b1b_add_row_level_security_and_app_role_.py  bcdef3d087e8_add_doctor_sessions_and_appointment_paid.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: appointments.py  auth.py  consultations.py  departments.py  doctors.py  health.py  medicines.py  patients.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  appointment.py  base.py  consultation.py  department.py  doctor.py  enums.py  hospital.py  patient.py  user.py
backend/app/schemas/: appointment.py  auth.py  consultation.py  department.py  doctor.py  patient.py  scheduling.py
backend/app/services/: ai_service.py  appointment_service.py  auth_service.py  consultation_service.py  department_service.py  doctor_service.py  medicine_service.py  patient_service.py  scheduling_service.py  tenancy.py  voice_booking_service.py
backend/scripts/: seed.py
db/init/: 01-init-app-role.sql
docs/: DEMO_SCRIPT.md  DEPLOYMENT.md  PROJECT_GUIDE.md  SETUP_PLAYBOOK.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: appointments.ts  consultations.ts  departments.ts  doctors.ts  (+2 more)
(+30 files in other folders)
